[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exo"
version = "0.0.1"
description = "Run your own AI cluster at home with everyday devices"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "exo labs", email = "hello@exolabs.net"}
]
requires-python = ">=3.12.0,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp==3.10.11",
    "aiohttp-cors==0.7.0",
    "aiofiles==24.1.0",
    "grpcio==1.70.0",
    "grpcio-tools==1.70.0",
    "Jinja2==3.1.4",
    "numpy==2.0.0",
    "nuitka==2.5.1",
    "nvidia-ml-py==12.560.30",
    "opencv-python==4.10.0.84",
    "pillow==10.4.0",
    "prometheus-client==0.20.0",
    "protobuf==5.28.1",
    "psutil==6.0.0",
    "pyamdgpuinfo==2.1.6; sys_platform == 'linux'",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "rich==13.7.1",
    "scapy==2.6.1",
    "tqdm==4.66.4",
    "transformers==4.46.3",
    "uuid==1.30",
    "uvloop==0.21.0",
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git@ec120ce6b9ce8e4ff4b5692566a683ef240e8bc8",
]

[project.optional-dependencies]
formatting = ["yapf==0.40.2"]
apple-silicon = [
    "mlx==0.29.0",
    "mlx-lm==0.27.1",
]
windows = ["pywin32==308"]
nvidia-gpu = ["nvidia-ml-py==12.560.30"]
amd-gpu = ["pyrsmi==0.2.0"]

[project.scripts]
exo = "exo.main:run"

[project.urls]
Homepage = "https://github.com/exo-explore/exo"
Repository = "https://github.com/exo-explore/exo"
Issues = "https://github.com/exo-explore/exo/issues"

[tool.setuptools.packages.find]
include = ["exo*"]

[tool.setuptools.package-data]
exo = ["tinychat/**/*"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git", rev = "ec120ce6b9ce8e4ff4b5692566a683ef240e8bc8" }
